--- a/back/src/ProAtividade.API/appsettings.Development.json
+++ b/back/src/ProAtividade.API/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+	"ConnectionStrings": {
+		"Default": "Data Source=ProAtividade.db"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	}
 }
