--- a/back/src/ProAtividade.Data/ProAtividade.Data.csproj
+++ b/back/src/ProAtividade.Data/ProAtividade.Data.csproj
@@ -1,10 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
   	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
@@ -17,12 +11,16 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProAtividade.Data\ProAtividade.Data.csproj" />
     <ProjectReference Include="..\ProAtividade.Domain\ProAtividade.Domain.csproj" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 
 </Project>
